Setting up striped table

--- a/app/containers/containers.html
+++ b/app/containers/containers.html
@@ -1,4 +1,4 @@
-<table class="table table-condensed table-hover table-bordered">
+<table class="table table-condensed table-hover table-striped table-bordered">
     <thead>
     <tr class="success">
         <td colspan="7">
