--- a/app/images/images.html
+++ b/app/images/images.html
@@ -1,5 +1,5 @@
 <div class="col-md-12 pull-right">
-    <table class="table table-condensed table-hover table-bordered">
+    <table class="table table-condensed table-hover table-striped table-bordered">
         <tr class="success">
             <td colspan="6">
                 <div class="col-md-4">
