Adding counter badge to containers

--- a/app/containers/containers.html
+++ b/app/containers/containers.html
@@ -12,7 +12,7 @@
 
             </div>
             <div class="col-md-6 vcenter">
-                Containers on on {{$root.hostUrl}}
+                Containers on on {{$root.hostUrl}} <span class="badge">{{containerDataSize}}</span>
             </div>
         </td>
     </tr>
