Adding image counter badge

--- a/app/images/images.html
+++ b/app/images/images.html
@@ -13,7 +13,7 @@
                     </button>
                 </div>
                 <div class="col-md-6 vcenter">
-                    <strong>Images on {{$root.hostUrl}}</strong>
+                    <strong>Images on {{$root.hostUrl}} <span class="badge">{{images.length}}</span></strong>
                 </div>
             </td>
         </tr>
