Finished iteration on image details. Remaining task; add tags

--- a/app/imageDetails/imageDetails.html
+++ b/app/imageDetails/imageDetails.html
@@ -48,6 +48,10 @@
         <div class="col-md-2 col-md-offset-5">Working dir:</div>
         <div class="col-md-5"><code ng-show="imageDetails.Config.WorkingDir.length>0">{{imageDetails.Config.WorkingDir}}</code></div>
     </div>
+    <div class="alert-danger col-md-12">
+        <!--TODO add image tags and tag management -->
+        <strong>TODO: add image tags and tag management!</strong>
+    </div>
     <hr/>
     <div class="table-responsive">
         <table class="table table-condensed table-hover table-striped table-bordered">
