--- a/app/imageDetails/imageDetails.html
+++ b/app/imageDetails/imageDetails.html
@@ -8,9 +8,10 @@
     </div>
     <div class="row">
         <div class="col-md-1">ID / Parent ID:</div>
-        <div class="col-md-4"><a ng-href="#/images/{{imageDetails.Id}}"><samp><span
+        <div class="col-md-4"><a ng-href="#/imageDetails/{{imageDetails.Id}}"><samp><span
                 class="label label-primary">{{imageDetails.Id | limitTo:12}}</span></samp></a> / <a
-                ng-href="#/images/{{imageDetails.Parent}}"><samp><span class="label label-info">{{imageDetails.Parent | limitTo:12}}</span></samp></a></div>
+                ng-href="#/imageDetails/{{imageDetails.Parent}}"><samp><span class="label label-info">{{imageDetails.Parent | limitTo:12}}</span></samp></a>
+        </div>
         <div class="col-md-2">Author:</div>
         <div class="col-md-5">{{imageDetails.Author}}</div>
     </div>
@@ -48,10 +49,6 @@
     <div class="row">
         <div class="col-md-2 col-md-offset-5">Working dir:</div>
         <div class="col-md-5"><code ng-show="imageDetails.Config.WorkingDir.length>0">{{imageDetails.Config.WorkingDir}}</code></div>
-    </div>
-    <div class="alert-danger col-md-12">
-        <!--TODO add image tags and tag management -->
-        <strong>TODO: add image tags and tag management!</strong>
     </div>
     <hr/>
     <div class="table-responsive">
