--- a/app/containers/containers.html
+++ b/app/containers/containers.html
@@ -1,58 +1,68 @@
-<table class="table table-condensed table-hover table-striped table-bordered">
-    <thead>
-    <tr class="success">
-        <td colspan="6">
-            <div class="col-md-4">
-                <button type="button" ng-click="refreshContainers()" class="btn btn-primary"><span class="glyphicon glyphicon-refresh"></span>Refresh
-                </button>
-                <button type="button" class="btn btn-primary" ng-click="switchShowAllFlag()">
-                    <span ng-class="{'glyphicon glyphicon-unchecked':!showAllImagesFlag, 'glyphicon glyphicon-check':showAllImagesFlag}"></span>All
-                </button>
-                <button type="button" class="btn btn-primary" ng-click="switchShowUntaggedFlag()"><span
-                        ng-class="{'glyphicon glyphicon-unchecked':!showUntaggedImagesFlag, 'glyphicon glyphicon-check':showUntaggedImagesFlag}"></span>Untagged
-                </button>
-                <button type="button" class="btn btn-primary" ng-click="switchShowContainerSizeFlag()"><span
-                        ng-class="{'glyphicon glyphicon-unchecked':!showContainerSizeFlag, 'glyphicon glyphicon-check':showContainerSizeFlag}"></span>Show size
-                </button>
-                <button type="button" class="btn btn-success" ng-click='createContainer()' title="Create new container"><span
-                        class="glyphicon glyphicon-plus"></span>Create
-                </button>
+<div class="col-md-12 pull-right">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>Containers on: {{$root.hostUrl}} </h1>
+        </div>
+    </div>
+    <hr/>
 
-            </div>
-            <div class="col-md-6 vcenter">
-                Containers on on {{$root.hostUrl}} <span class="badge">{{containerDataSize}}</span>
-            </div>
-        </td>
-    </tr>
-    <tr>
-        <td width="15%" class="text-center">ID</td>
-        <td width="15%" class="text-center">Name</td>
-        <td width="15%" class="text-center">Image</td>
-        <td width="14%" class="text-center">Created</td>
-        <td width="10%" class="text-center">Status</td>
-        <td width="10%" class="text-center">Diff size (Virtual size)</td>
-    </tr>
-    </thead>
-    <tbody>
-    <tr ng-repeat="(key, value) in containerDataList">
-        <td>
-            <button class="btn btn-info btn-block text-center" ng-click="goContainerDetails(value.Id)">
-                {{value.Id | limitTo:12}}
-            </button>
-        </td>
-        <td>
-            <button class="btn btn-info btn-block text-right" ng-click="goContainerDetails(value.Id)">
-                {{value.Name | shorten:true:30}}
-            </button>
-        </td>
-        <td>
-            <button class="btn btn-info btn-block" ng-click="goImageDetails(value.ImageId)">
-                {{value.Image | shorten:true:30}}
-            </button>
-        </td>
-        <td>{{value.Created * 1000 | date:'dd, MMM yyyy HH:mm:ss'}}</td>
-        <td class="text-center">{{value.Status}}</td>
-        <td>{{value.SizeRw | bytes:2 }} ({{value.SizeRootFs | bytes:2 }})</td>
-    </tr>
-    </tbody>
-</table>
+    <table class="table table-condensed table-hover table-striped table-bordered">
+        <thead>
+        <tr class="success">
+            <td colspan="6">
+                <div class="col-md-4">
+                    <button type="button" ng-click="refreshContainers()" class="btn btn-primary"><span class="glyphicon glyphicon-refresh"></span>Refresh
+                    </button>
+                    <button type="button" class="btn btn-primary" ng-click="switchShowAllFlag()">
+                        <span ng-class="{'glyphicon glyphicon-unchecked':!showAllImagesFlag, 'glyphicon glyphicon-check':showAllImagesFlag}"></span>All
+                    </button>
+                    <button type="button" class="btn btn-primary" ng-click="switchShowUntaggedFlag()"><span
+                            ng-class="{'glyphicon glyphicon-unchecked':!showUntaggedImagesFlag, 'glyphicon glyphicon-check':showUntaggedImagesFlag}"></span>Untagged
+                    </button>
+                    <button type="button" class="btn btn-primary" ng-click="switchShowContainerSizeFlag()"><span
+                            ng-class="{'glyphicon glyphicon-unchecked':!showContainerSizeFlag, 'glyphicon glyphicon-check':showContainerSizeFlag}"></span>Show
+                        size
+                    </button>
+                    <button type="button" class="btn btn-success" ng-click='createContainer()' title="Create new container"><span
+                            class="glyphicon glyphicon-plus"></span>Create
+                    </button>
+
+                </div>
+                <div class="col-md-6 vcenter">
+                    <strong> Items listed: <span class="badge">{{containerDataSize}}</span></strong>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td width="10%" class="text-center"><strong>ID</strong></td>
+            <td width="10%" class="text-center"><strong>Name</strong></td>
+            <td width="10%" class="text-center"><strong>Image</strong></td>
+            <td width="10%" class="text-center"><strong>Status</strong></td>
+            <td width="10%" class="text-center"><strong>Diff size (Virtual size)</strong></td>
+            <td width="8%" class="text-center"><strong>Created</strong></td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="(key, value) in containerDataList" class="text-center">
+            <td>
+                <button class="btn btn-info btn-block text-center" ng-click="goContainerDetails(value.Id)">
+                    {{value.Id | limitTo:12}}
+                </button>
+            </td>
+            <td class="text-center">
+                <button class="btn btn-info btn-block text-right" ng-click="goContainerDetails(value.Id)">
+                    {{value.Name | shorten:true:30}}
+                </button>
+            </td>
+            <td class="text-center">
+                <button class="btn btn-info btn-block" ng-click="goImageDetails(value.ImageId)">
+                    {{value.Image | shorten:true:30}}
+                </button>
+            </td>
+            <td class="text-left">{{value.Status}}</td>
+            <td class="text-left">{{value.SizeRw | bytes:2 }} ({{value.SizeRootFs | bytes:2 }})</td>
+            <td class="text-left">{{value.Created * 1000 | date:'dd, MMM yyyy HH:mm:ss'}}</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
