Removing unnecessary namespace

--- a/app/imageDetails/imageDetails.html
+++ b/app/imageDetails/imageDetails.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 pull-right" xmlns="http://www.w3.org/1999/html">
+<div class="col-md-12 pull-right">
     <div class="row">
         <div class="col-md-12">
             <h1>Image: **first image tag**
