Working on container details

--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -1,4 +1,12 @@
-<div class="container">
+<div class="col-md-12 pull-right">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>Image: **first image tag**
+
+            </h1>
+        </div>
+    </div>
+
 
     <div id="main-wrapper" class="col-md-12 pull-right">
         <div id="main">
