--- a/app/images/images.html
+++ b/app/images/images.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 pull-right">
     <div class="row">
         <div class="col-md-12">
-            <h1>Images on: {{$root.hostUrl}} </h1>
+            <h1>Images on: <strong>{{$root.hostUrl}}</strong></h1>
         </div>
     </div>
     <hr/>
