--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -25,7 +25,7 @@
         <div class="col-md-1">Image:</div>
         <div class="col-md-3"><a ng-href="#/imageDetails/{{containerDetails.Image}}">
             <samp>
-                <span class="label label-primary">{{containerDetails.Config.Image | limitTo:12}}</span>
+                <span class="label label-primary">{{containerDetails.Config.Image | limitTo:50}}</span>
             </samp></a>
         </div>
         <div class="col-md-1">Ports:</div>
@@ -91,10 +91,19 @@
     </div>
     <hr/>
     <ul class="nav nav-tabs">
-        <li role="presentation" class="active"><a href="#">Logs</a></li>
-        <li role="presentation"><a href="#">Processes</a></li>
-        <li role="presentation"><a href="#">Diff</a></li>
-        <li role="presentation"><a href="#">TTY</a></li>
-        <li role="presentation"><a href="#">Pure json</a></li>
+        <li role="presentation" ng-class="{'active':activeTab=='logs'}"><a ng-click="showLogs(containerDetails.Id.substr(0,12))">Logs</a></li>
+        <li role="presentation" ng-class="{'active':activeTab=='ps'}"><a ng-click="showProcesses(containerDetails.Id.substr(0,12))">Processes</a></li>
+        <li role="presentation" ng-class="{'active':activeTab=='diff'}"><a ng-click="showDiff(containerDetails.Id.substr(0,12))">Diff</a></li>
+        <li role="presentation" ng-class="{'active':activeTab=='tty'}"><a ng-click="showTty(containerDetails.Id.substr(0,12))">TTY</a></li>
+        <li role="presentation" ng-class="{'active':activeTab=='json'}"><a ng-click="showJson(containerDetails.Id.substr(0,12))">Pure json</a></li>
     </ul>
+    <div ng-show="activeTab=='diff'">
+        <div class="row" ng-repeat="diff in containerDiffs track by $index">
+            <div class="col-md-1"><span
+                    ng-class="{'glyphicon glyphicon-pencil text-warning':diff.Kind==0,'glyphicon glyphicon-plus text-success':diff.Kind==1,'glyphicon glyphicon-trash text-danger':diff.Kind==2 }"></span>
+            </div>
+            <div class="col-md-11">{{diff.Path}}</div>
+        </div>
+
+    </div>
 </div>
