--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -98,8 +98,16 @@
         <li role="presentation" ng-class="{'active':activeTab=='json'}"><a ng-click="showJson(containerDetails.Id.substr(0,12))">Pure json</a></li>
     </ul>
     <div ng-show="activeTab=='diff'">
+        <div class="row">
+            <div class="col-md-1 text-center">
+                Status
+            </div>
+            <div class="col-md-11">
+                Path
+            </div>
+        </div>
         <div class="row" ng-repeat="diff in containerDiffs track by $index">
-            <div class="col-md-1"><span
+            <div class="col-md-1 text-center"><span
                     ng-class="{'glyphicon glyphicon-pencil text-warning':diff.Kind==0,'glyphicon glyphicon-plus text-success':diff.Kind==1,'glyphicon glyphicon-trash text-danger':diff.Kind==2 }"></span>
             </div>
             <div class="col-md-11">{{diff.Path}}</div>
